@@ -49,6 +49,7 @@ buildkonfig {
 compose.desktop {
     application {
         mainClass = "MainKt"
+        jvmArgs += "--enable-native-access=ALL-UNNAMED"
         nativeDistributions {
             targetFormats(
                 TargetFormat.Dmg,
